fixed mobile spacing, remove horizontal scroll

--- a/trendz/src/Components/Component.css
+++ b/trendz/src/Components/Component.css
@@ -1,3 +1,5 @@
+
+
 a {
     text-decoration: none;
     color: inherit;
@@ -17,11 +19,22 @@ span {
     /* margin-left: auto;
     margin-right: auto; */
     cursor: pointer; 
+    overflow-x: hidden
 
 }
+/* .Block{
+    max-width: 600px;
+    margin-left: auto;
+    margin-right:auto;
+    padding-left: 5%;
+    padding-right: 5%;
+    cursor: pointer; 
+
+} */
 
 .Block:hover{
     opacity: 70%;
+    flex: 1;
     max-width: 650px;
     padding-left: none;
     padding-right: none;
@@ -61,7 +74,7 @@ span {
     padding-bottom: 1.5em;
     display: block;
     flex: 1;
-
+    overflow: hidden;
 }
 
 .circlePhoto {
@@ -70,7 +83,8 @@ span {
     height: 4em;
     object-fit: cover;
     float: left;
-    margin-right: 0.5em;
+    margin-right: 0.8em;
+    margin-bottom: 0.2em;
     margin-top: 0.4em;
     filter: drop-shadow(3px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -80,7 +94,7 @@ span {
     object-fit: scale-down;
     border-radius: 4px;
     float: left;
-    margin-right: 0.5em;
+    margin-right: 0.8em;
     margin-top: 0.3em;
     filter: drop-shadow(5px 4px 4px rgba(0, 0, 0, 0.25));
 }
@@ -95,31 +109,23 @@ span {
    
     border-radius: 4px;
     height: 2.2em;
-    margin-right: 0.5em;
+    margin-right: 0.8em;
+    margin-bottom: 1em;
+    margin-top: 0.3em;
+    border-radius: 4px;
+
+    filter: drop-shadow(5px 4px 4px rgba(0, 0, 0, 0.25));
+
 
     
 }
 
-.youtubeImageFormat{
-    /* height: 4em; */
-    /* overflow: hidden; */
-    /* object-fit: fill; */
-    /* width: 4em; */
-    /* height: 4em; */
-    /* float: left; */
-    border-radius: 4px;
-    margin-right: 0.5em;
-    filter: drop-shadow(5px 4px 4px rgba(0, 0, 0, 0.25));
-
-
-
+.twitchTitle{
+    padding-bottom: 0.8em;
 
 }
 
 
-/* Divider{
-
-} */
 
 .hashtag {
     color: #4C9EEB;
@@ -153,4 +159,8 @@ span {
 .song{
     color: #B1945C;
 
+}
+
+.twitch{
+    color: #75A192;
 }
